@startuml
'https://plantuml.com/class-diagram



class FileParseSort{
    + List<String> Combiner(List<String> info)
    + List<String> CharCombiner(List<String> info, String Current, String CurrentBuild, int i)
      String DashString
      List<String> spreadList
      String Current
      String CurrentBuild
      int i
      int j
}

class FileParseBase{
     List<String> Info
   + {static} void main()
   - {static} List<String> convertFile()
}

class FileParseTable{
    + {static} void TableOutput(List<String> info)
    + int Max(List<String> info, int start)
    + String Spaces(int max, int size)
    + String Dash(int max)
    + String SpaceMax(List<String> info)
      String DashString
      String Space
      int Max
      String SpaceMaximum
}
FileParseBase <|-- FileParseSort
FileParseBase <|-- FileParseTable

@enduml